This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Deprecating PyUnicodeEncodeError_Create
Type: Stage: resolved
Components: C API Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: eamanu, methane, miss-islington
Priority: normal Keywords: patch

Created on 2020-06-24 08:42 by methane, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 21162 merged methane, 2020-06-25 23:31
PR 21761 merged miss-islington, 2020-08-07 07:32
PR 21762 merged miss-islington, 2020-08-07 07:32
Messages (7)
msg372241 - (view) Author: Inada Naoki (methane) * (Python committer) Date: 2020-06-24 08:42
PyUnicodeEncodeError_Create is using Py_UNICODE and is marked Py_DEPRECATED(3.3).
But it is not deprecated in doc yet.

There are no alternative API.  In CPython code base, UnicodeEncodeError is created by `PyObject_CallFunction(PyExc_UnicodeEncodeError, ...)`.

Can we just document it as deprecated since Python 3.3?
Or should we add alternative API?
msg372399 - (view) Author: Emmanuel Arias (eamanu) * Date: 2020-06-26 01:40
Yes, IMO in docs must exist a deprecated directive entry for `PyUnicodeEncodeError_Create`.

Is the same situation with `PyUnicodeTranslateError_Create`, isn't?
msg372400 - (view) Author: Inada Naoki (methane) * (Python committer) Date: 2020-06-26 01:47
See #41099 for PyUnicodeTranslateError_Create.
msg372402 - (view) Author: Emmanuel Arias (eamanu) * Date: 2020-06-26 01:51
oops, I didn't see. Thanks
msg374981 - (view) Author: Inada Naoki (methane) * (Python committer) Date: 2020-08-07 07:32
New changeset 46e19b61d31ba99f049258efa4ff1334856a3643 by Inada Naoki in branch 'master':
bpo-41098: Doc: Add missing deprecated directives (GH-21162)
https://github.com/python/cpython/commit/46e19b61d31ba99f049258efa4ff1334856a3643
msg374982 - (view) Author: miss-islington (miss-islington) Date: 2020-08-07 07:49
New changeset dc98a5468a48ecffe95a6c3a07ce21366477bdd7 by Miss Islington (bot) in branch '3.8':
bpo-41098: Doc: Add missing deprecated directives (GH-21162)
https://github.com/python/cpython/commit/dc98a5468a48ecffe95a6c3a07ce21366477bdd7
msg374983 - (view) Author: miss-islington (miss-islington) Date: 2020-08-07 07:49
New changeset b2514c4934291364404a2bc78256b77026a80dff by Miss Islington (bot) in branch '3.9':
bpo-41098: Doc: Add missing deprecated directives (GH-21162)
https://github.com/python/cpython/commit/b2514c4934291364404a2bc78256b77026a80dff
History
Date User Action Args
2022-04-11 14:59:32adminsetgithub: 85270
2021-04-14 05:16:01methanesetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-08-07 07:49:57miss-islingtonsetmessages: + msg374983
2020-08-07 07:49:57miss-islingtonsetmessages: + msg374982
2020-08-07 07:32:15miss-islingtonsetpull_requests: + pull_request20907
2020-08-07 07:32:07miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request20906
2020-08-07 07:32:06methanesetmessages: + msg374981
2020-06-26 01:51:15eamanusetmessages: + msg372402
2020-06-26 01:47:20methanesetmessages: + msg372400
2020-06-26 01:40:41eamanusetmessages: + msg372399
2020-06-26 01:35:20eamanusetnosy: + eamanu
2020-06-25 23:31:34methanesetkeywords: + patch
stage: patch review
pull_requests: + pull_request20321
2020-06-24 08:42:38methanecreate