bpo-41098: Doc: Deprecate PyUnicodeEncodeError_Create

PyUnicodeEncodeError_Create has been deprecated with
`Py_DEPRECATED` macro. But it was not documented.